--- a/Resume.html
+++ b/Resume.html
@@ -11,10 +11,10 @@
     <div id="background"></div>
 
     <ul id="nav">
-      <li><a href="SamMcPhailWebsite.html">ABOUT</a></li>
-      <li><a href="#">PROJECTS</a></li>
-      <li><a href="#">GITHUB</a></li>
-      <li><a href="#">RESUME</a></li>
+      <li><a href="index.html">ABOUT</a></li>
+      <li><a href="index.html#projects">PROJECTS</a></li>
+      <li><a href="https://github.com/sam-mcphail19">GITHUB</a></li>
+      <li><a href="resume.html">RESUME</a></li>
       <li><a href="#">CONTACT</a></li>
     </ul>
 
