Resized images, added contact section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ ctrl-alt-q to stop
       <li><a href="#projects">PROJECTS</a></li>
       <li><a href="https://github.com/sam-mcphail19">GITHUB</a></li>
       <li><a href="resume.html">RESUME</a></li>
-      <li><a href="#">CONTACT</a></li>
+      <li><a href="#footer">CONTACT</a></li>
     </ul>
 
     <h1 id="title">Sam McPhail</h1>
@@ -34,33 +34,33 @@ ctrl-alt-q to stop
 
       <div class="project-row">
         <span class="project-left">
-          <h3>Chess<a href="https://github.com/sam-mcphail19/SamMcPhail-chess"><img src="img/github.png" class="github"></a></h3>
-          <img src="img/chess.png">
+          <h3>Chess <a href="https://github.com/sam-mcphail19/SamMcPhail-chess"><img src="img/github.png" class="github"></a></h3>
+          <a href="https://github.com/sam-mcphail19/SamMcPhail-chess"><img src="img/chess.png"></a>
           <p>
             I am writing a chess clone in Java, using the Swing library to create the window, and render the images.
           </p>
         </span>
 
         <span class="project-right">
-          <h3>Project 2 Name<a href="#"><img src="img/github.png" class="github"></a></h3>
-          <img src="img/chess.png">
+          <h3>Algorithm Analysis Experiment <a href="https://github.com/sam-mcphail19/Search-Algoirthm-Analysis"><img src="img/github.png" class="github"></a></h3>
+          <a href="https://github.com/sam-mcphail19/Search-Algoirthm-Analysis"><img src="img/bigO.png"></a>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            A school assignment to analyze the efficiency of a linear search on a dataset vs a sorting algorithm combined with a binary search. I wrote the program for the experiment, as well as a paper to analyze and explain the results.
           </p>
         </span>
       </div>
 
       <div class="project-row">
         <span class="project-left">
-          <h3>Simple Web Game<a href="https://github.com/sam-mcphail19/ToucanWebGame"><img src="img/github.png" class="github"></a></h3>
-          <img src="img/chess.png">
+          <h3>Simple Web Game <a href="https://github.com/sam-mcphail19/ToucanWebGame"><img src="img/github.png" class="github"></a></h3>
+          <a href="https://github.com/sam-mcphail19/ToucanWebGame"><img id="toucan" src="img/toucan.png"></a>
           <p>
             A game I made as a project for a high school computer science class. I wrote the "myprogram.js" file, and drew all of the art, the rest was done by my teacher.
           </p>
         </span>
 
         <span class="project-right">
-          <h3>Project 4 Name<a href="#"><img src="img/github.png" class="github"></a></h3>
+          <h3>Project 4 Name <a href="#"><img src="img/github.png" class="github"></a></h3>
           <img src="img/chess.png">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -71,7 +71,16 @@ ctrl-alt-q to stop
 
   </body>
 
-  <footer>
+  <footer id="footer">
+    <h2>Contact Me</h2>
+    <div class="contacthalf">
+      <p><img src="img/email.png"> sam.mcphail9@gmail.com</p>
+      <p><img src="img/phone.png" /> (403) 671-4036</p>
+    </div>
+    <div class="contacthalf">
+      <p><a href="https://github.com/sam-mcphail19"><img src="img/github.png"/> Github</a></p>
+      <p><a href="https://www.linkedin.com/in/sam-mcphail-320549177/"><img src="img/linkedin.png"/> LinkedIn </a></p>
+    </div>
 
   </footer>
 
