Changes to images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ ctrl-alt-q to stop
     <h1 id="title">Sam McPhail</h1>
 
     <div id="headshot">
-      <img src="img/headshot.jpg"> <!-- Temp image -->
+      <img src="">
     </div>
 
     <div id="projects">
