Added new project

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ ctrl-alt-q to stop
         </span>
 
         <span class="project-right">
-          <h3>Project 4 Name <a href="#"><img src="img/github.png" class="github"></a></h3>
-          <img src="img/chess.png">
+          <h3>Flappy Bird AI <a href="https://github.com/sam-mcphail19/flappy-bird-ai"><img src="img/github.png" class="github"></a></h3>
+          <img src="img/neuralNet.png">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            A simple clone of the game Flappy Bird, with an AI to play the game written in Python. The AI is an implementation of a genetic algorithm that evolves an optimal neural network for playing the game.
           </p>
         </span>
       </div>
