--- a/index.html
+++ b/index.html
@@ -4,84 +4,28 @@ ctrl-alt-q to stop
 -->
 
 <!DOCTYPE html>
-<html>
-
+<html lang="en" dir="ltr">
   <head>
     <title>Sam McPhail</title>
-    <link rel="stylesheet" href="style.css"/>
+    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
+    <link rel="stylesheet" text="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" text="text/css" href="css/custom.css">
   </head>
-
   <body>
-
-    <div id="background"></div>
-
-    <ul id="nav">
-      <li><a href="index.html">ABOUT</a></li>
-      <li><a href="#projects">PROJECTS</a></li>
-      <li><a href="https://github.com/sam-mcphail19">GITHUB</a></li>
-      <li><a href="resume.html">RESUME</a></li>
-      <li><a href="#footer">CONTACT</a></li>
-    </ul>
-
-    <h1 id="title">Sam McPhail</h1>
-
-    <div id="headshot">
-      <img src="">
-    </div>
-
-    <div id="projects">
-      <h1>Projects</h1>
-
-      <div class="project-row">
-        <span class="project-left">
-          <h3>Chess <a href="https://github.com/sam-mcphail19/SamMcPhail-chess"><img src="img/github.png" class="github"></a></h3>
-          <a href="https://github.com/sam-mcphail19/SamMcPhail-chess"><img src="img/chess.png"></a>
-          <p>
-            I am writing a chess clone in Java, using the Swing library to create the window, and render the images.
-          </p>
-        </span>
-
-        <span class="project-right">
-          <h3>Algorithm Analysis Experiment <a href="https://github.com/sam-mcphail19/Search-Algoirthm-Analysis"><img src="img/github.png" class="github"></a></h3>
-          <a href="https://github.com/sam-mcphail19/Search-Algoirthm-Analysis"><img src="img/bigO.png"></a>
-          <p>
-            A school assignment to analyze the efficiency of a linear search on a dataset vs a sorting algorithm combined with a binary search. I wrote the program for the experiment, as well as a paper to analyze and explain the results.
-          </p>
-        </span>
+    <nav class="navbar">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Sam McPhail</a>
+        </div>
+        <ul class="nav justify-content-end">
+          <li><a href="#">Experience</a></li>
+          <li><a href="#">Education</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
       </div>
-
-      <div class="project-row">
-        <span class="project-left">
-          <h3>Simple Web Game <a href="https://github.com/sam-mcphail19/ToucanWebGame"><img src="img/github.png" class="github"></a></h3>
-          <a href="https://github.com/sam-mcphail19/ToucanWebGame"><img id="toucan" src="img/toucan.png"></a>
-          <p>
-            A game I made as a project for a high school computer science class. I wrote the "myprogram.js" file, and drew all of the art, the rest was done by my teacher.
-          </p>
-        </span>
-
-        <span class="project-right">
-          <h3>Flappy Bird AI <a href="https://github.com/sam-mcphail19/flappy-bird-ai"><img src="img/github.png" class="github"></a></h3>
-          <img src="img/neuralNet.png">
-          <p>
-            A simple clone of the game Flappy Bird, with an AI to play the game written in Python. The AI is an implementation of a genetic algorithm that evolves an optimal neural network for playing the game.
-          </p>
-        </span>
-      </div>
-    </div>
-
+    </nav>
   </body>
-
-  <footer id="footer">
-    <h2>Contact Me</h2>
-    <div class="contacthalf">
-      <p><img src="img/email.png"> sam.mcphail9@gmail.com</p>
-      <p><img src="img/phone.png" /> (403) 671-4036</p>
-    </div>
-    <div class="contacthalf">
-      <p><a href="https://github.com/sam-mcphail19"><img src="img/github.png"/> Github</a></p>
-      <p><a href="https://www.linkedin.com/in/sam-mcphail-320549177/"><img src="img/linkedin.png"/> LinkedIn </a></p>
-    </div>
-
-  </footer>
-
 </html>
