Finished nav bar and added next section

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ ctrl-alt-q to stop
     <link rel="stylesheet" text="text/css" href="css/custom.css">
   </head>
   <body>
-    <nav class="navbar">
+    <nav class="navbar sticky-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">Sam McPhail</a>
         </div>
-        <ul class="nav justify-content-end">
+        <ul class="nav navbar-right">
           <li><a href="#">Experience</a></li>
           <li><a href="#">Education</a></li>
           <li><a href="#">Projects</a></li>
@@ -27,5 +27,25 @@ ctrl-alt-q to stop
         </ul>
       </div>
     </nav>
+	<div class="container-fluid">
+	  <div class="span4"></div>
+	  <div class="span4">
+		<div class="row">
+		  <div class="col">
+			<img class="img-left" src="img/headshot.jpg">
+		  </div>
+		  <div class="col">
+			<h3>Sam McPhail</h3>
+			<p>sam.mcphail@queensu.ca</p>
+			<p>(403) 671 - 4036</p>
+		  </div>
+		</div>
+		<div class="row">
+		  <div class="col">Github</div>
+		  <div class="col">LinkedIn</div>
+		</div>
+	  </div>
+	  <div class="span4"></div>
+	</div>
   </body>
 </html>
