Fixed main info box

--- a/index.html
+++ b/index.html
@@ -13,39 +13,47 @@ ctrl-alt-q to stop
     <link rel="stylesheet" text="text/css" href="css/custom.css">
   </head>
   <body>
-    <nav class="navbar sticky-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Sam McPhail</a>
-        </div>
-        <ul class="nav navbar-right">
-          <li><a href="#">Experience</a></li>
-          <li><a href="#">Education</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
-	<div class="container-fluid">
-	  <div class="span4"></div>
-	  <div class="span4">
-		<div class="row">
-		  <div class="col">
-			<img class="img-left" src="img/headshot.jpg">
-		  </div>
-		  <div class="col">
-			<h3>Sam McPhail</h3>
-			<p>sam.mcphail@queensu.ca</p>
-			<p>(403) 671 - 4036</p>
-		  </div>
-		</div>
-		<div class="row">
-		  <div class="col">Github</div>
-		  <div class="col">LinkedIn</div>
+    <div class="container-fluid">
+	  <div class="row">
+		<div class="col-sm-12">
+	      <nav class="navbar sticky-top">
+		    <div class="container-fluid">
+		      <div class="navbar-header">
+			    <a class="navbar-brand" href="#">Sam McPhail</a>
+		      </div>
+		      <ul class="nav navbar-right">
+			    <li><a href="#">Experience</a></li>
+			    <li><a href="#">Education</a></li>
+			    <li><a href="#">Projects</a></li>
+			    <li><a href="#">Skills</a></li>
+			    <li><a href="#">Contact</a></li>
+		      </ul>
+		    </div>
+	      </nav>
 		</div>
 	  </div>
-	  <div class="span4"></div>
+	  <div class="row top-buffer">
+	  </div>
+	  <div class="row p-2 justify-content-center">
+		<div class="flex-container md-6 bg-white shadow justify-content-center">
+		  <div class="row">
+			<div class="col">
+			  <img src="img/headshot.jpg" class="img-fluid rounded-circle">
+			</div>
+			<div class="col">
+			  <h3>Sam McPhail</h3>
+			  <p>sam.mcphail@queensu.ca</p>
+		      <p>(403) 671 - 4036</p>
+			</div>
+		  </div>
+		  <div class="row" id="links">
+			<div class="col" align="center">
+			  <p class="pLink">Github</p>
+			  <p class="pLink">LinkedIn</p>
+			</div>
+		  </div>
+		</div>
+	  </div>
 	</div>
   </body>
 </html>
