Formatting info box

--- a/index.html
+++ b/index.html
@@ -35,21 +35,33 @@ ctrl-alt-q to stop
 	  <div class="row top-buffer">
 	  </div>
 	  <div class="row p-2 justify-content-center">
-		<div class="flex-container md-6 bg-white shadow justify-content-center">
-		  <div class="row">
+		<div class="flex-container bg-white shadow-lg justify-content-center rounded">
+		  <div class="row ml-auto mr-auto">
 			<div class="col">
-			  <img src="img/headshot.jpg" class="img-fluid rounded-circle">
+			  <img src="img/headshot.jpg" class="img-fluid rounded-circle mt-2">
 			</div>
 			<div class="col">
-			  <h3>Sam McPhail</h3>
-			  <p>sam.mcphail@queensu.ca</p>
-		      <p>(403) 671 - 4036</p>
+			  <h3 class="text-center mt-3">Sam McPhail</h3>
+			  <span>
+			  </span>
+			  <span>
+			  </span>
+			  <p class="mt-4">sam.mcphail@queensu.ca</p>
+		      <p>(403) 671-4036</p>
 			</div>
 		  </div>
-		  <div class="row" id="links">
+		  <div class="row ml-auto mr-auto" id="links">
 			<div class="col" align="center">
-			  <p class="pLink">Github</p>
-			  <p class="pLink">LinkedIn</p>
+			  <p class="vertical-center mt-2">
+			    <span class="mr-5">
+				  <img src="img/github.png">
+				  <small>Github</small>
+				</span>
+				<span class="ml-5">
+				<img src="img/linkedin.png">
+				  <small>LinkedIn</small>
+				</span>
+			  </p>
 			</div>
 		  </div>
 		</div>
