Added links and a todo list

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@ ctrl-alt-q to stop
 	      <nav class="navbar sticky-top">
 		    <div class="container-fluid">
 		      <div class="navbar-header">
-			    <a class="navbar-brand" href="#">Sam McPhail</a>
+			    <a class="navbar-brand underline" href="#">Sam McPhail</a>
 		      </div>
 		      <ul class="nav navbar-right">
-			    <li><a href="#">Experience</a></li>
-			    <li><a href="#">Education</a></li>
-			    <li><a href="#">Projects</a></li>
-			    <li><a href="#">Skills</a></li>
-			    <li><a href="#">Contact</a></li>
+			    <li><a href="#" class="underline">Experience</a></li>
+			    <li><a href="#" class="underline">Education</a></li>
+			    <li><a href="#" class="underline">Projects</a></li>
+			    <li><a href="#" class="underline">Skills</a></li>
+			    <li><a href="#" class="underline">Contact</a></li>
 		      </ul>
 		    </div>
 	      </nav>
@@ -38,32 +38,52 @@ ctrl-alt-q to stop
 		<div class="flex-container bg-white shadow-lg justify-content-center rounded">
 		  <div class="row ml-auto mr-auto">
 			<div class="col">
-			  <img src="img/headshot.jpg" class="img-fluid rounded-circle mt-2">
+			  <img src="img/headshot.jpg" class="img-fluid mt-2">
 			</div>
 			<div class="col">
 			  <h3 class="text-center mt-3">Sam McPhail</h3>
-			  <span>
-			  </span>
-			  <span>
-			  </span>
-			  <p class="mt-4">sam.mcphail@queensu.ca</p>
-		      <p>(403) 671-4036</p>
+			  <p class="mt-5">
+				<span>
+			      <img src="img/email.png"> sam.mcphail@queensu.ca
+				</span>
+			  </p>
+			  <p>
+				<span>
+			      <img src="img/phone.png"> (403) 671-4036
+				</span>
+			  </p>
 			</div>
 		  </div>
 		  <div class="row ml-auto mr-auto" id="links">
 			<div class="col" align="center">
 			  <p class="vertical-center mt-2">
-			    <span class="mr-5">
-				  <img src="img/github.png">
-				  <small>Github</small>
+				<span class="mr-5">
+				  <a href="https://github.com/sam-mcphail19" class="text-decoration-none">
+					<img src="img/github.png">
+					<small class="text-black">Github</small>
+				  </a>
 				</span>
 				<span class="ml-5">
-				<img src="img/linkedin.png">
-				  <small>LinkedIn</small>
+				  <a href="https://www.linkedin.com/in/sam-mcphail-320549177/" class="text-decoration-none text-reset">
+				    <img src="img/linkedin.png">
+				    <small class="text-black">LinkedIn</small>
+				  </a>
 				</span>
 			  </p>
 			</div>
 		  </div>
+		</div>
+	  </div>
+	  <div class="row buffer text-center">
+		<div class="col">
+		  <h3 class="fade-in">Work Experience</h3>
+		  <ul class="list-unstyled">
+		    <li>1</li>
+			<li>2</li>
+			<li>3</li>
+			<li>4</li>
+			<li>5</li>
+		  </ul>
 		</div>
 	  </div>
 	</div>
