Fixed fade animation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ ctrl-alt-q to stop
 	<script src="scripts.js"></script>
   </head>
   <body>
-    <nav class="navbar fixed-top bg-white">
+    <nav class="navbar fixed-top bg-white" id="nav">
 	  <div class="container-fluid">
 		<div class="navbar-header">
 		  <a class="navbar-brand underline" href="#">Sam McPhail</a>
@@ -32,7 +32,7 @@ ctrl-alt-q to stop
     <main class="container-fluid">
 	  <div class="row top-buffer"></div>
 	  <div class="row p-2 justify-content-center">
-		<div class="flex-container bg-white shadow-lg justify-content-center rounded fade">
+		<div class="flex-container bg-white shadow-lg justify-content-center rounded scroll-fade">
 		  <div class="row ml-auto mr-auto">
 			<div class="col">
 			  <img src="img/headshot.jpg" class="img-fluid mt-2">
@@ -74,7 +74,7 @@ ctrl-alt-q to stop
 	  <div class="row top-buffer"></div>
 	  <div class="row buffer text-center">
 		<div class="col">
-		  <h3 class="fade">Work Experience</h3>
+		  <h3 class="scroll-fade">Work Experience</h3>
 		  <ul class="list-unstyled">
 		    <li>1</li>
 			<li>2</li>
@@ -86,7 +86,7 @@ ctrl-alt-q to stop
 	  </div>
 	  <div class="row buffer text-center">
 		<div class="col">
-		  <h3 class="fade">Work Experience</h3>
+		  <h3 class="scroll-fade">Work Experience</h3>
 		  <ul class="list-unstyled">
 		    <li>1</li>
 			<li>2</li>
