Changed parameters on fade animation and changed nav links to buttons to allow scroll animation later

--- a/index.html
+++ b/index.html
@@ -20,19 +20,18 @@ ctrl-alt-q to stop
 		<div class="navbar-header">
 		  <a class="navbar-brand underline" href="#">Sam McPhail</a>
 		</div>
-		<ul class="nav navbar-right">
-		  <li><a href="#" class="underline">Experience</a></li>
-	      <li><a href="#" class="underline">Education</a></li>
-		  <li><a href="#" class="underline">Projects</a></li>
-		  <li><a href="#" class="underline">Skills</a></li>
-		  <li><a href="#" class="underline">Contact</a></li>
-		</ul>
+    <div class="nav">
+      <button type="button"><h5 class="underline">Education</h5></button>
+      <button type="button"><h5 class="underline">Experience</h5></button>
+      <button type="button"><h5 class="underline">Projects</h5></button>
+      <button type="button"><h5 class="underline">Contact</h5></button>
+    </div>
 	  </div>
 	</nav>
     <main class="container-fluid">
 	  <div class="row top-buffer"></div>
 	  <div class="row p-2 justify-content-center">
-		<div class="flex-container bg-white shadow-lg justify-content-center rounded scroll-fade">
+		<div class="flex-container bg-white shadow-lg justify-content-center rounded scroll-fade-large">
 		  <div class="row ml-auto mr-auto">
 			<div class="col">
 			  <img src="img/headshot.jpg" class="img-fluid mt-2">
@@ -72,29 +71,41 @@ ctrl-alt-q to stop
 		</div>
 	  </div>
 	  <div class="row top-buffer"></div>
-	  <div class="row buffer text-center">
-		<div class="col">
-		  <h3 class="scroll-fade">Work Experience</h3>
-		  <ul class="list-unstyled">
-		    <li>1</li>
-			<li>2</li>
-			<li>3</li>
-			<li>4</li>
-			<li>5</li>
-		  </ul>
-		</div>
+    <div class="row buffer text-center" id="education">
+  		<div class="col">
+  		  <h3 class="scroll-fade-small">Education</h3>
+  		  <ul class="list-unstyled">
+  		    <li>1</li>
+    			<li>2</li>
+    			<li>3</li>
+    			<li>4</li>
+    			<li>5</li>
+  		  </ul>
+  		</div>
 	  </div>
-	  <div class="row buffer text-center">
-		<div class="col">
-		  <h3 class="scroll-fade">Work Experience</h3>
-		  <ul class="list-unstyled">
-		    <li>1</li>
-			<li>2</li>
-			<li>3</li>
-			<li>4</li>
-			<li>5</li>
-		  </ul>
-		</div>
+	  <div class="row buffer text-center" id="experience">
+  		<div class="col">
+  		  <h3 class="scroll-fade-small">Experience</h3>
+  		  <ul class="list-unstyled">
+  		    <li>1</li>
+    			<li>2</li>
+    			<li>3</li>
+    			<li>4</li>
+    			<li>5</li>
+  		  </ul>
+  		</div>
+	  </div>
+    <div class="row buffer text-center" id="projects">
+  		<div class="col">
+  		  <h3 class="scroll-fade-small">Projects</h3>
+  		  <ul class="list-unstyled">
+  		    <li>1</li>
+    			<li>2</li>
+    			<li>3</li>
+    			<li>4</li>
+    			<li>5</li>
+  		  </ul>
+  		</div>
 	  </div>
 	</main>
   </body>
