--- a/index.html
+++ b/index.html
@@ -11,102 +11,105 @@ ctrl-alt-q to stop
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
     <link rel="stylesheet" text="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" text="text/css" href="css/custom.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="scripts.js"></script>
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	  <script src="scripts.js"></script>
   </head>
   <body>
     <nav class="navbar fixed-top bg-white" id="nav">
-	  <div class="container-fluid">
-		<div class="navbar-header">
-		  <a class="navbar-brand underline" href="#">Sam McPhail</a>
-		</div>
-    <div class="nav">
-      <button type="button"><h5 class="underline">Education</h5></button>
-      <button type="button"><h5 class="underline">Experience</h5></button>
-      <button type="button"><h5 class="underline">Projects</h5></button>
-      <button type="button"><h5 class="underline">Contact</h5></button>
-    </div>
-	  </div>
-	</nav>
+  	  <div class="container-fluid">
+    		<div class="navbar-header">
+    		  <a class="navbar-brand underline" href="#">Sam McPhail</a>
+    		</div>
+        <div class="nav">
+          <button type="button"><h5 class="underline">Education</h5></button>
+          <button type="button"><h5 class="underline">Experience</h5></button>
+          <button type="button"><h5 class="underline">Projects</h5></button>
+          <button type="button"><h5 class="underline">Contact</h5></button>
+        </div>
+  	  </div>
+	  </nav>
     <main class="container-fluid">
-	  <div class="row top-buffer"></div>
-	  <div class="row p-2 justify-content-center">
-		<div class="flex-container bg-white shadow-lg justify-content-center rounded scroll-fade-large">
-		  <div class="row ml-auto mr-auto">
-			<div class="col">
-			  <img src="img/headshot.jpg" class="img-fluid mt-2">
-			</div>
-			<div class="col">
-			  <h3 class="text-center mt-3">Sam McPhail</h3>
-			  <p class="mt-5">
-				<span>
-			      <img src="img/email.png"> sam.mcphail@queensu.ca
-				</span>
-			  </p>
-			  <p>
-				<span>
-			      <img src="img/phone.png"> (403) 671-4036
-				</span>
-			  </p>
-			</div>
-		  </div>
-		  <div class="row ml-auto mr-auto" id="links">
-			<div class="col" align="center">
-			  <p class="vertical-center mt-2">
-				<span class="mr-5">
-				  <a href="https://github.com/sam-mcphail19" class="text-decoration-none">
-					<img src="img/github.png">
-					<small class="text-black">Github</small>
-				  </a>
-				</span>
-				<span class="ml-5">
-				  <a href="https://www.linkedin.com/in/sam-mcphail-320549177/" class="text-decoration-none text-reset">
-				    <img src="img/linkedin.png">
-				    <small class="text-black">LinkedIn</small>
-				  </a>
-				</span>
-			  </p>
-			</div>
-		  </div>
-		</div>
-	  </div>
-	  <div class="row top-buffer"></div>
-    <div class="row buffer text-center" id="education">
-  		<div class="col">
-  		  <h3 class="scroll-fade-small">Education</h3>
-  		  <ul class="list-unstyled">
-  		    <li>1</li>
-    			<li>2</li>
-    			<li>3</li>
-    			<li>4</li>
-    			<li>5</li>
-  		  </ul>
-  		</div>
-	  </div>
-	  <div class="row buffer text-center" id="experience">
-  		<div class="col">
-  		  <h3 class="scroll-fade-small">Experience</h3>
-  		  <ul class="list-unstyled">
-  		    <li>1</li>
-    			<li>2</li>
-    			<li>3</li>
-    			<li>4</li>
-    			<li>5</li>
-  		  </ul>
-  		</div>
-	  </div>
-    <div class="row buffer text-center" id="projects">
-  		<div class="col">
-  		  <h3 class="scroll-fade-small">Projects</h3>
-  		  <ul class="list-unstyled">
-  		    <li>1</li>
-    			<li>2</li>
-    			<li>3</li>
-    			<li>4</li>
-    			<li>5</li>
-  		  </ul>
-  		</div>
-	  </div>
-	</main>
+      <div class="">
+
+      </div>
+	    <div class="row top-buffer"></div>
+	    <div class="row p-2 justify-content-center">
+		    <div class="flex-container bg-white shadow-lg justify-content-center rounded scroll-fade-large">
+		      <div class="row ml-auto mr-auto">
+			      <div class="col">
+			        <img src="img/headshot.jpg" class="img-fluid mt-2">
+			      </div>
+			      <div class="col">
+			        <h3 class="text-center mt-3">Sam McPhail</h3>
+			        <p class="mt-5">
+				        <span>
+			            <img src="img/email.png"> sam.mcphail@queensu.ca
+				        </span>
+			        </p>
+			        <p>
+				        <span>
+			            <img src="img/phone.png"> (403) 671-4036
+				        </span>
+			        </p>
+			      </div>
+		      </div>
+		      <div class="row ml-auto mr-auto" id="links">
+			      <div class="col" align="center">
+			        <p class="vertical-center mt-2">
+        				<span class="mr-5">
+        				  <a href="https://github.com/sam-mcphail19" class="text-decoration-none">
+        					<img src="img/github.png">
+        					<small class="text-black">Github</small>
+        				  </a>
+        				</span>
+        				<span class="ml-5">
+        				  <a href="https://www.linkedin.com/in/sam-mcphail-320549177/" class="text-decoration-none text-reset">
+        				    <img src="img/linkedin.png">
+        				    <small class="text-black">LinkedIn</small>
+        				  </a>
+        				</span>
+      			  </p>
+			      </div>
+		      </div>
+		    </div>
+	    </div>
+  	  <div class="row top-buffer"></div>
+      <div class="row buffer text-center" id="education">
+    		<div class="col">
+    		  <h3 class="scroll-fade-small">Education</h3>
+    		  <ul class="list-unstyled">
+    		    <li>1</li>
+      			<li>2</li>
+      			<li>3</li>
+      			<li>4</li>
+      			<li>5</li>
+    		  </ul>
+    		</div>
+  	  </div>
+  	  <div class="row buffer text-center" id="experience">
+    		<div class="col">
+    		  <h3 class="scroll-fade-small">Experience</h3>
+    		  <ul class="list-unstyled">
+    		    <li>1</li>
+      			<li>2</li>
+      			<li>3</li>
+      			<li>4</li>
+      			<li>5</li>
+    		  </ul>
+    		</div>
+  	  </div>
+      <div class="row buffer text-center" id="projects">
+    		<div class="col">
+    		  <h3 class="scroll-fade-small">Projects</h3>
+    		  <ul class="list-unstyled">
+    		    <li>1</li>
+      			<li>2</li>
+      			<li>3</li>
+      			<li>4</li>
+      			<li>5</li>
+    		  </ul>
+    		</div>
+  	  </div>
+	  </main>
   </body>
 </html>
