Added function to make navbar transparent when at top, but white otherwise

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@ ctrl-alt-q to stop
 	  <script src="scripts.js"></script>
   </head>
   <body>
-    <nav class="navbar fixed-top bg-white" id="nav">
+    <nav class="navbar fixed-top" id="nav">
   	  <div class="container-fluid">
     		<div class="navbar-header">
     		  <a class="navbar-brand underline" href="#">Sam McPhail</a>
     		</div>
-        <div class="nav">
+        <div class="nav" align="right">
           <button type="button"><h5 class="underline">Education</h5></button>
           <button type="button"><h5 class="underline">Experience</h5></button>
           <button type="button"><h5 class="underline">Projects</h5></button>
