Changed background picture to scroll with page

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ ctrl-alt-q to stop
         </div>
   	  </div>
 	  </nav>
-    <main class="container-fluid">
-      <div class="">
-
+      <main class="container-fluid">
+      <div id="background">
+        <img src="img/background.png" alt="">
       </div>
 	    <div class="row top-buffer"></div>
 	    <div class="row p-2 justify-content-center">
