Added shadow to navbar and fixed underlining animation bug

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@ ctrl-alt-q to stop
     <link rel="stylesheet" text="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" text="text/css" href="css/custom.css">
 	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	  <script src="scripts.js"></script>
+    <script src="js/jquery.color-2.1.2.js"></script>
+	  <script src="js/scripts.js"></script>
   </head>
   <body>
     <nav class="navbar fixed-top" id="nav">
   	  <div class="container-fluid">
     		<div class="navbar-header">
-    		  <a class="navbar-brand underline" href="#">Sam McPhail</a>
+          <button type="button"><h3 class="underline">Sam McPhail</h3></button>
     		</div>
         <div class="nav" align="right">
           <button type="button"><h5 class="underline">Education</h5></button>
@@ -56,16 +57,16 @@ ctrl-alt-q to stop
 		      <div class="row ml-auto mr-auto" id="links">
 			      <div class="col" align="center">
 			        <p class="vertical-center mt-2">
-        				<span class="mr-5">
+        				<span class="mr-5 media-link">
         				  <a href="https://github.com/sam-mcphail19" class="text-decoration-none">
         					<img src="img/github.png">
-        					<small class="text-black">Github</small>
+        					Github
         				  </a>
         				</span>
-        				<span class="ml-5">
+        				<span class="ml-5 media-link">
         				  <a href="https://www.linkedin.com/in/sam-mcphail-320549177/" class="text-decoration-none text-reset">
         				    <img src="img/linkedin.png">
-        				    <small class="text-black">LinkedIn</small>
+        				    LinkedIn
         				  </a>
         				</span>
       			  </p>
