--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ ctrl-alt-q to stop
         <div class="nav" align="right">
           <button type="button"><h5 class="underline">Education</h5></button>
           <button type="button"><h5 class="underline">Experience</h5></button>
+          <button type="button"><h5 class="underline">Extracurriculars</h5></button>
           <button type="button"><h5 class="underline">Projects</h5></button>
           <button type="button"><h5 class="underline">Contact</h5></button>
         </div>
@@ -35,7 +36,7 @@ ctrl-alt-q to stop
       </div>
 	    <div class="row top-buffer"></div>
 	    <div class="row p-2 justify-content-center">
-		    <div class="flex-container bg-white shadow-lg justify-content-center rounded scroll-fade-large">
+		    <div class="flex-container bg-white shadow-lg justify-content-center rounded scroll-fade">
 		      <div class="row ml-auto mr-auto">
 			      <div class="col">
 			        <img src="img/headshot.jpg" class="img-fluid mt-2">
@@ -75,39 +76,146 @@ ctrl-alt-q to stop
 		    </div>
 	    </div>
   	  <div class="row top-buffer"></div>
-      <div class="row buffer text-center" id="education">
+      <div class="row buffer" id="education">
     		<div class="col">
-    		  <h3 class="scroll-fade-small">Education</h3>
-    		  <ul class="list-unstyled">
-    		    <li>1</li>
-      			<li>2</li>
-      			<li>3</li>
-      			<li>4</li>
-      			<li>5</li>
+    		  <h3 class="text-center">Education</h3>
+    		  <ul class="list-unstyled w-60-center">
+    		    <li class="buffer-small">
+              <h5 class="text-center pb-3 bold">Bachelor of Computing (Honours) in Software Design - Queen's University</h5>
+              <h5 style="float: right">(2017 - 2021)</h5>
+              <ul class="inner-list">
+                <li class="slide-in-right">4.1 GPA (4.3 Scale)</li>
+                <li class="slide-in-right">Queen’s Excellence Scholarship – an entrance scholarship provided to students with excellent high school performance</li>
+                <li class="slide-in-right">Dean’s Honour List in 2017-2018 and 2018-2019</li>
+                <li class="slide-in-right">
+                  Notable Classes: Introdction to Computing I (A+), Introduction to Computing II (A),
+                  Discrete Mathematics for Computing I (A+), Linear Algebra (A+), Differential and Integral Calculus (A+),
+                  Data Structures (A+), Software Specifications (A), Discrete Mathematics II (A+), System Level Programming (A-),
+                  Logic for Computing (A+), Software Quality Assurance, Software Architecture
+                </li>
+              </ul>
+            </li>
+      			<li class="buffer-small">
+              <h5 class="text-center bold">Certificate in Business - Smith School of Business</h5>
+              <h5 style="float: right">(2018 - 2021)</h5>
+              <ul class="inner-list">
+                <li class="slide-in-right">
+                  Notable Classes: Business Fundamentals (A), Fundamentals of Marketing (A-), Financial Accounting
+                </li>
+              </ul>
+            </li>
     		  </ul>
     		</div>
   	  </div>
-  	  <div class="row buffer text-center" id="experience">
+  	  <div class="row buffer" id="experience">
     		<div class="col">
-    		  <h3 class="scroll-fade-small">Experience</h3>
-    		  <ul class="list-unstyled">
-    		    <li>1</li>
-      			<li>2</li>
-      			<li>3</li>
-      			<li>4</li>
-      			<li>5</li>
+    		  <h3 class="text-center">Experience</h3>
+    		  <ul class="list-unstyled w-60-center">
+            <li class="buffer-small">
+              <h5 class="text-center pb-3 bold">End User Computing Analyst - Sobeys Western Canada</h5>
+              <h5 style="float: right">(May - September 2019)</h5>
+              <ul class="inner-list">
+                <li class="slide-in-right">Supported users by resolving an average of 15 incident and request tickets per week</li>
+                <li class="slide-in-right">Designed and implemented a new piece of software that was used by the entire EUC team to more efficiently complete PC Refresh projects</li>
+                <li class="slide-in-right">Developed and maintained user relations through daily communication</li>
+                <li class="slide-in-right">Contributed to the completion of multiple phases of a PC Refresh project</li>
+              </ul>
+            </li>
+            <li class="buffer-small">
+              <h5 class="text-center pb-3 bold">Teaching Assistant - Discrete Mathematics - Queen's University</h5>
+              <h5 style="float: right">(2018 - Current)</h5>
+              <ul class="inner-list">
+                <li class="slide-in-right">Communicated complex concepts while adapting to individualized student learning needs</li>
+                <li class="slide-in-right">Stimulated intellectual conversations to evoke critical thinking</li>
+                <li class="slide-in-right">Coordinated with other TAs and recorded student grades using Microsoft Excel</li>
+              </ul>
+            </li>
+            <li class="buffer-small">
+              <h5 class="text-center pb-3 bold">Outdoor Service Department- Pinebrook Golf and Country Club</h5>
+              <h5 style="float: right">(2017 - 2018)</h5>
+              <ul class="inner-list">
+                <li class="slide-in-right">Maintained a general cleanliness around the workplace, ensured everything was timely</li>
+                <li class="slide-in-right">Demonstrated conflict resolution skills by resolving tension with members</li>
+                <li class="slide-in-right">Refined interpersonal skills by interacting daily with the members</li>
+              </ul>
+            </li>
     		  </ul>
     		</div>
   	  </div>
-      <div class="row buffer text-center" id="projects">
+      <div class="row buffer" id="extrcurriculars">
     		<div class="col">
-    		  <h3 class="scroll-fade-small">Projects</h3>
-    		  <ul class="list-unstyled">
-    		    <li>1</li>
-      			<li>2</li>
-      			<li>3</li>
-      			<li>4</li>
-      			<li>5</li>
+    		  <h3 class="text-center">Extracurriculars</h3>
+    		  <ul class="list-unstyled w-60-center">
+    		    <li class="buffer-small">
+              <h5 class="text-center pb-3 bold">Software Developer - Queen's Technology & Media Association</h5>
+              <h5 style="float: right">(2019-2020)</h5>
+              <ul class="inner-list">
+                <li class="slide-in-right">4.1 GPA (4.3 Scale)</li>
+                <li class="slide-in-right">Queen’s Excellence Scholarship – an entrance scholarship provided to students with excellent high school performance</li>
+                <li class="slide-in-right">Dean’s Honour List in 2017-2018 and 2018-2019</li>
+              </ul>
+            </li>
+      			<li class="buffer-small">
+              <h5 class="text-center bold">Orientation Week Leader - Queen's University</h5>
+              <h5 style="float: right">(2018)</h5>
+              <ul class="inner-list">
+                <li class="slide-in-right">Guided a group of 20 incoming students throughout orientation week and continued to mentor them after</li>
+                <li class="slide-in-right">Received training in positive space creation, sexual and gender diversity, and inclusion</li>
+              </ul>
+            </li>
+            <li class="buffer-small">
+              <h5 class="bold">Science Olympics - Ernest Manning High School</h5>
+              <h5 style="float: right">(2015 - 2017)</h5>
+              <ul class="inner-list">
+                <li class="slide-in-right">Applied creative and problem-solving skills by designing unique deliverables consisting of recyclable materials</li>
+                <li class="slide-in-right">Competed against 20 teams and won 2nd place both 1st and 2nd year</li>
+                <li class="slide-in-right">Committed a total of 80 hours to maximize the effectiveness of the projects</li>
+                <li class="slide-in-right">Developed an in-depth understanding of engineering and the design process</li>
+              </ul>
+            </li>
+    		  </ul>
+    		</div>
+  	  </div>
+      <div class="row buffer" id="projects">
+    		<div class="col">
+    		  <h3 class="text-center">Projects</h3>
+    		  <ul class="list-unstyled w-60-center">
+            <li class="buffer-small">
+              <h5 class="text-center pb-3 bold">Flappy Bird AI</h5>
+              <span class="repo-link" style="float: right">
+                <a href="https://github.com/sam-mcphail19/Side-Projects/tree/master/Flappy-Bird-AI">
+                <img src="img/github.png">
+                </a>
+              </span>
+              <ul class="inner-list">
+                <li class="slide-in-right">A clone of the game Flappy Bird written in Python using the Pygame library</li>
+                <li class="slide-in-right">Created an evolutionary algorithm that learns to play the game over the course of multiple generations using a basic neural network passed on to future generations</li>
+              </ul>
+            </li>
+            <li class="buffer-small">
+              <h5 class="text-center pb-3 bold">Chess</h5>
+              <span class="repo-link" style="float: right">
+                <a href="https://github.com/sam-mcphail19/Side-Projects/tree/master/Chess">
+                <img src="img/github.png">
+                </a>
+              </span>
+              <ul class="inner-list">
+                <li class="slide-in-right">A clone of the game Chess written in Java with the use of the Swing library</li>
+                <li class="slide-in-right">Implemented basic functionality and added features such as timers and UI/UX improvements</li>
+              </ul>
+            </li>
+            <li class="buffer-small">
+              <h5 class="text-center pb-3 bold">This Page</h5>
+              <span class="repo-link" style="float: right">
+                <a href="https://github.com/sam-mcphail19/sam-mcphail19.github.io">
+                <img src="img/github.png">
+                </a>
+              </span>
+              <ul class="inner-list">
+                <li class="slide-in-right">A webpage made using HTML and CSS with Bootstrap</li>
+                <li class="slide-in-right">Animations implemented using JQuery</li>
+              </ul>
+            </li>
     		  </ul>
     		</div>
   	  </div>
