Added actual headshot image

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@ ctrl-alt-q to stop
           <button type="button" onclick="scrollToTop()"><h3 class="underline">Sam McPhail</h3></button>
     		</div>
         <div class="nav" align="right">
-          <button type="button" onclick="scrollToElement('#education')"><h5 class="underline">Education</h5></button>
-          <button type="button"><h5 class="underline"onclick="scrollToElement('#experience')">Experience</h5></button>
-          <button type="button"><h5 class="underline"onclick="scrollToElement('#extrcurriculars')">Extracurriculars</h5></button>
-          <button type="button"><h5 class="underline"onclick="scrollToElement('#projects')">Projects</h5></button>
-          <button type="button"><h5 class="underline"onclick="scrollToElement('#contact')">Contact</h5></button>
+          <button type="button"><h5 class="underline" onclick="scrollToElement('#education')">Education</h5></button>
+          <button type="button"><h5 class="underline" onclick="scrollToElement('#experience')">Experience</h5></button>
+          <button type="button"><h5 class="underline" onclick="scrollToElement('#extrcurriculars')">Extracurriculars</h5></button>
+          <button type="button"><h5 class="underline" onclick="scrollToElement('#projects')">Projects</h5></button>
+          <button type="button"><h5 class="underline" onclick="scrollToElement('#contact')">Contact</h5></button>
         </div>
   	  </div>
 	  </nav>
@@ -39,7 +39,7 @@ ctrl-alt-q to stop
 		    <div class="flex-container bg-white shadow-lg justify-content-center rounded scroll-fade">
 		      <div class="row ml-auto mr-auto">
 			      <div class="col">
-			        <img src="img/headshot.jpg" class="img-fluid mt-2">
+			        <img src="img/headshot.jpg" class="img-fluid mt-2" id="headshot">
 			      </div>
 			      <div class="col">
 			        <h3 class="text-center mt-3">Sam McPhail</h3>
