Fix issue with headshot resizing

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ ctrl-alt-q to stop
 	    <div class="row p-2 justify-content-center">
 		    <div class="flex-container bg-white shadow-lg justify-content-center rounded scroll-fade">
 		      <div class="row ml-auto mr-auto">
-			      <div class="col">
-			        <img src="img/headshot.jpg" class="img-fluid mt-2" id="headshot">
+			      <div class="col text-center">
+			        <img src="img/headshot.jpg" id="headshot">
 			      </div>
 			      <div class="col">
 			        <h3 class="text-center mt-3">Sam McPhail</h3>
